@@ -1,47 +1,53 @@
 package com.meokplaylist.security;
 
-import org.slf4j.LoggerFactory;
-import org.springframework.core.io.Resource;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
-import org.slf4j.Logger;
 
 @Configuration
 public class RsaKeyConfig {
 
+    @Value("${rsa.private-key-path}")
+    private String privateKeyPath;
 
-    @Value("classpath:keys/private.pem")
-    private Resource privatePem;
-
-    @Value("classpath:keys/public.pem")
-    private Resource publicPem;
+    @Value("${rsa.public-key-path}")
+    private String publicKeyPath;
 
     @Bean
     public RSAPrivateKey rsaPrivateKey() throws Exception {
-        String pem = Files.readString(privatePem.getFile().toPath())
-                .replaceAll("-----\\w+ PRIVATE KEY-----|\\s", "");
-        RSAPrivateKey key = (RSAPrivateKey) KeyFactory.getInstance("RSA")
-                .generatePrivate(new PKCS8EncodedKeySpec(Base64.getDecoder().decode(pem)));
+        byte[] keyBytes = Files.readAllBytes(Paths.get(privateKeyPath));
+        String privateKeyPEM = new String(keyBytes, StandardCharsets.UTF_8)
+                .replace("-----BEGIN PRIVATE KEY-----", "")
+                .replace("-----END PRIVATE KEY-----", "")
+                .replaceAll("\\s+", "");
 
-        return key;
+        byte[] decoded = Base64.getDecoder().decode(privateKeyPEM);
+        PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
+        KeyFactory kf = KeyFactory.getInstance("RSA");
+        return (RSAPrivateKey) kf.generatePrivate(keySpec);
     }
 
     @Bean
     public RSAPublicKey rsaPublicKey() throws Exception {
-        String pem = Files.readString(publicPem.getFile().toPath())
-                .replaceAll("-----\\w+ PUBLIC KEY-----|\\s", "");
-        RSAPublicKey key = (RSAPublicKey) KeyFactory.getInstance("RSA")
-                .generatePublic(new X509EncodedKeySpec(Base64.getDecoder().decode(pem)));
-        return key;
+        byte[] keyBytes = Files.readAllBytes(Paths.get(publicKeyPath));
+        String publicKeyPEM = new String(keyBytes, StandardCharsets.UTF_8)
+                .replace("-----BEGIN PUBLIC KEY-----", "")
+                .replace("-----END PUBLIC KEY-----", "")
+                .replaceAll("\\s+", "");
+
+        byte[] decoded = Base64.getDecoder().decode(publicKeyPEM);
+        X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decoded);
+        KeyFactory kf = KeyFactory.getInstance("RSA");
+        return (RSAPublicKey) kf.generatePublic(keySpec);
     }
 }
-
